--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,7 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 body {
-    background-image: url('/Time/background.jpg');
+    background-image: url('/Projects/Images/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: scroll;
+    height: 100vh;
 }
