--- a/Numbers/Calculator.css
+++ b/Numbers/Calculator.css
@@ -9,25 +9,42 @@ body {
 
 .display-container {
     background-color: rgba(134, 84, 93);
-    height: 5rem;
+    height: 7rem;
     width: 25rem;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -210%);
+    transform: translate(-50%, -180%);
     border-radius: 1rem;
+    flex-direction: column;
 }
 
-#display {
+#display1 {
+    height: 2rem;
+    width: 24rem;
+    border:none;
+    border-radius: 10px 10px 0px 0px;
+    background-color: rgba(255, 255, 255, 0.925);
+    text-align: end;
+    padding-right: 1rem;
+    font-size: 1rem;
+    color:rgb(58, 10, 19);
+    box-shadow: none;
+    outline: none;
+}
+
+#display2 {
     height: 4rem;
     width: 24rem;
-    border-radius: 1rem;
+    border-radius: 0px 0px 10px 10px;
     border:none;
     background-color: rgba(255, 255, 255, 0.925);
     text-align: end;
     padding-right: 1rem;
     font-size: 2rem;
-    color:rgb(58, 10, 19)
+    color:rgb(58, 10, 19);
+    box-shadow: none;
+    outline: none;
 }
 
 .calc-container {
@@ -52,6 +69,7 @@ button {
     background-color: rgba(134, 84, 93, 0.7);
     color: white;
     font-weight: 900;
+    border: 2px solid rgb(94, 40, 49);
 }
 
 button:hover {
